--- a/new-app-home.html
+++ b/new-app-home.html
@@ -172,7 +172,7 @@ style="min-width: 400px; height: 400px; margin: 0 auto"></div>
 </div>
 
 <div>
-<table class="table table-striped">
+  <table class="table table-striped">
     <thead>
       <tr>
         <th>No.</th>
@@ -219,9 +219,9 @@ style="min-width: 400px; height: 400px; margin: 0 auto"></div>
     </tbody>
   </table>
 
-<hr>
+  <hr>
 
-<table class="table table-striped">
+  <table class="table table-striped">
     <thead>
       <tr>
         <th>No.</th>
@@ -236,6 +236,7 @@ style="min-width: 400px; height: 400px; margin: 0 auto"></div>
         <td>전체 유저 중 피드백 작성 비율 : 3%</td>
         <td>활성 유저 중 피드백 작성 비율 : 15%</td>
         <td>  피드백 응답율 : 64%</td>
+        <td>&nbsp;</td>
       </tr>
       <tr  class="info">
         <td>2</td>
@@ -251,12 +252,170 @@ style="min-width: 400px; height: 400px; margin: 0 auto"></div>
         <td>   Question: 320/359건 (89%) </td>
         <td>  Suggestion : 48/49건 (98%)  </td>
         <td> Problem : 57/57건 (100%)</td>
+        <td>&nbsp;</td>
       </tr>
 
     </tbody>
   </table>
+</hr>
+<h2>Advanced Satistics는 이렇게 제공됩니다. </h2>
+<table class="table table-bordered">
+  <thead>
+    <tr style="background-color:#F5DEDA;">
+      <th><h3 style="color:#EB9487">Mix Graph&nbsp;&nbsp;&nbsp;&nbsp;<i class="icon-arrow-down"></i></h3><i class="icon-arrow-right"></i><i class="icon-remove" ></i></th>
+      <th>Device Model</th>
+      <th>Device Manufacture</th>
+      <th>Platform</th>
+      <th>Platform Version</th>
+      <th>App Version</th>
+      <th>Country</th>
+      <th>Network Type</th>
+    </tr>
+  </thead>
 
+  <tbody>
+    <tr class="">
 
+      <td style="background-color:#E9F7D5;"><strong>Questions</strong></td>
+      <td>&nbsp;</td> 
+      <td>&nbsp;</td>
+      <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+      <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+    </tr>
+    <tr class="">
+
+      <td style="background-color:#E9F7D5;"><strong>Suggestions</strong></td>
+      <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+      <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+      <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+      <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+    </tr>
+    <tr class="">
+
+      <td style="background-color:#E9F7D5;"> <strong>Problems</strong></td>
+      <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+      <td>&nbsp;</td>
+      <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+    </tr>
+  </tr>
+  <tr class="">
+
+    <td style="background-color:#E9F7D5;"><strong>Evaluation</strong></td>
+    <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+    <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+    <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr class="">
+
+    <td style="background-color:#E9F7D5;"><strong>System FeedBack</strong></td>
+    <td>&nbsp;</td>
+    <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+    <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+
+    <td>&nbsp;</td>
+  </tr>
+  <tr class="">
+
+    <td style="background-color:#E9F7D5;"><strong>Device Model</strong></td>
+    <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+    <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+    <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+    <td>&nbsp;</td>
+    <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+
+  <td style="background-color:#E9F7D5;"><strong>Device Manufacture</strong></td>
+  <td>&nbsp;</td> 
+  <td>&nbsp;</td>
+  <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+  <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+
+  <td>&nbsp;</td>
+  <td>&nbsp;</td>
+  <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+</tr>
+<tr class="">
+
+  <td style="background-color:#E9F7D5;"><strong>Platform</strong></td>
+  <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+  <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+  <td>&nbsp;</td>
+  <td>&nbsp;</td>
+  <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+
+  <td>&nbsp;</td>
+  <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+</tr>
+<tr class="">
+
+  <td style="background-color:#E9F7D5;"><strong>Platform Version</strong></td>
+  <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+  <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+  <td>&nbsp;</td>
+  <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+
+  <td>&nbsp;</td>
+  <td>&nbsp;</td>
+  <td>&nbsp;</td>
+</tr>
+<tr class="">
+
+ <td style="background-color:#E9F7D5;"><strong>App Version</strong></td>
+ <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+ <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+ <td>&nbsp;</td>
+ <td>&nbsp;</td>
+ <td>&nbsp;</td>
+ <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+ <td>&nbsp;</td>
+</tr>
+<tr class="">
+
+  <td style="background-color:#E9F7D5;"><strong>Country</strong></td>
+  <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+  <td>&nbsp;</td>
+  <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+  <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+  <td>&nbsp;</td>
+  <td>&nbsp;</td>
+  <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+</tr>
+<tr class="">
+
+  <td style="background-color:#E9F7D5;"><strong>Network Type</strong></td>
+  <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+  <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+  <td>&nbsp;</td> 
+  <td>&nbsp;</td>
+  <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+  <td>&nbsp;</td>
+  <td><a href="Advanced Statistics.html"><center><button class="btn btn-success" type="button">제공함 </button></center></a></td>
+</tr>
+
+</tbody>
+</table>
 
 </div>
 </div><!--container-fluid-->
